<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/padding"
    tools:context="com.example.android.product_inventory.AddProduct">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/name_label"
                style="@style/add_product_text_view"
                android:text="@string/product_name" />
            <EditText
                android:id="@+id/name_edit"
                style="@style/add_product_edit_text"
                android:hint="@string/hint_product_name" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/price_label"
                style="@style/add_product_text_view"
                android:text="@string/product_price" />
            <EditText
                android:id="@+id/price_edit"
                style="@style/add_product_edit_text"
                android:hint="@string/hint_product_price" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/available_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/available_label"
                style="@style/add_product_text_view"
                android:text="@string/product_available" />
            <EditText
                android:id="@+id/edit_available"
                style="@style/add_product_edit_text"
                android:hint="@string/product_number" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contact_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/contact_label"
                style="@style/add_product_text_view"
                android:text="@string/contact_info" />
            <EditText
                android:id="@+id/edit_contact"
                style="@style/add_product_edit_text"
                android:hint="@string/contact_info_email" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/add_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Image" />
            <ImageView
                android:id="@+id/image_view"
                style="@style/add_product_image_view" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/save_product_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_save_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save product" />
            <TextView
                android:id="@+id/status_message"
                style="@style/add_product_text_view"
                android:textColor="@color/error_color" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>