<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.android.product_inventory.ProductInfo"
    android:weightSum="1"
    android:padding="@dimen/padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/padding">
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/product_name_label"
                style="@style/add_product_text_view"
                android:gravity="center_vertical"
                android:text="@string/product_name" />
            <TextView
                android:id="@+id/product_name"
                style="@style/add_product_text_view"
                android:gravity="center_vertical"
                android:textAllCaps="true"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/product_price_label"
                style="@style/add_product_text_view"
                android:gravity="center_vertical"
                android:text="@string/product_price"/>
            <TextView
                android:id="@+id/product_price"
                style="@style/add_product_text_view"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/available_label"
                style="@style/add_product_text_view"
                android:gravity="center_vertical"
                android:text="@string/product_available" />
            <TextView
                android:id="@+id/available_products"
                style="@style/add_product_text_view"
                android:gravity="center_vertical" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sold_label"
                style="@style/add_product_text_view"
                android:text="@string/item_sold"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/products_sold"
                style="@style/add_product_text_view"
                android:gravity="center_vertical" />
        </LinearLayout>
        <TextView
            android:id="@+id/change_available"
            style="@style/add_product_text_view"
            android:text="@string/modify"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/modify_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <Button
                android:id="@+id/up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"/>
            <Button
                android:id="@+id/down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/less"/>
            </LinearLayout>
            <EditText
                android:id="@+id/edit_available"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
            <LinearLayout
                android:id="@+id/edit_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="5dp">
                <Button
                    android:id="@+id/button_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:layout_marginLeft="80dp"/>
                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button"
                    android:layout_marginLeft="80dp"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/edit_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wrong format"
            android:layout_gravity="center"
            android:textColor="@color/error_color"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order"/>
            <Button
                android:id="@+id/button_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"/>
            <Button
                android:id="@+id/button_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>